<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/batt_level"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/battery_level_string"
        android:textColor="#F3F3F3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/TextViewOpen"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/CloseString"
        android:textColor="#F3F3F3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOpen" />

    <TextView
        android:id="@+id/textViewOpen"
        android:layout_width="105dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/OpenString"
        android:textColor="#F3F3F3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvNewDevices" />

    <TextView
        android:id="@+id/max_batt_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/max_bat_level_string"
        android:textColor="#F3F3F3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/batt_level" />

    <EditText
        android:id="@+id/max_bat_TextEdit"
        android:layout_width="35dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        android:text="85"
        android:imeOptions="actionDone"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/exitButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="EXIT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextClose" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="146dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/max_bat_level_string"
        android:textAlignment="viewStart"
        android:textColor="#F3F3F3"
        app:layout_constraintEnd_toStartOf="@+id/max_bat_TextEdit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/max_bat_level_string" />

    <ListView
        android:id="@+id/lvNewDevices"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/max_batt_TextView" />

    <Button
        android:id="@+id/btnDiscover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="24dp"
        android:onClick="btnDiscover"
        android:text="@string/discover_button_string"
        app:layout_constraintStart_toEndOf="@+id/max_bat_TextEdit"
        app:layout_constraintTop_toBottomOf="@+id/autoFinishSwitch" />

    <EditText
        android:id="@+id/editTextOpen"
        android:layout_width="102dp"
        android:layout_height="44dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:imeOptions="actionDone"
        android:text="@string/OpenDefaultString"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvNewDevices" />

    <EditText
        android:id="@+id/editTextClose"
        android:layout_width="105dp"
        android:layout_height="49dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:imeOptions="actionDone"
        android:text="@string/CloseDefaultString"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextOpen" />

    <Switch
        android:id="@+id/autoFinishSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/AutoFinishString"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/max_bat_TextEdit"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>